# gino-admin

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.txt  CONTRIBUTING.md  LICENSE  README.md  README.rst  build.sh  pyproject.toml
.github/workflows/: main.yml
docs/: ARCHIVE_CHANGELOG.txt  Makefile  README.rst  make.bat
docs/source/: authorization.rst  changelog.rst  cli.rst  conf.py  config.rst  contents.rst  contributing.rst  csv_upload.rst  customization.rst  examples.rst  features.rst  index.rst  limitations.rst  presets.rst  quick_start.rst  rest_api.rst  ui_screens.rst
docs/templates/: build_doc.py  index.template
examples/: example-docker-compose.yml  how_to_run_example.txt
examples/base_example/: how_to_run_example.txt  requirements.txt
examples/base_example/src/: app.py  db.py
examples/base_example/src/csv_to_upload/: preset1.yml  preset2.yml
examples/colored_ui/src/: app.py  db.py
examples/composite_csv_example/: how_to_run_example.txt  requirements.txt
examples/composite_csv_example/src/: app.py  db.py
examples/composite_csv_example/src/csv_to_upload/: preset1.yml  preset_composite_csv.yml
examples/composite_csv_example/src/csv_to_upload/csv/: composite.csv
examples/demo_stand/: description.txt
examples/demo_stand/src/: app.py
examples/fastapi_as_main_app/: how_to_run_example.txt  requirements.txt
examples/fastapi_as_main_app/src/: admin.py  db.py  main.py  models.py
examples/fastapi_as_main_app/src/csv_to_upload/: preset1.yml  preset2.yml
examples/run_from_cli/: requirements.txt
examples/run_from_cli/src/: db.py
examples/src/: app.py  db.py  presets.yml
examples/src/csv_to_upload/: gifts.csv  users.csv
examples/src/csv_to_upload/csv/preset_a/: gifts.csv  users.csv
examples/use_with_any_framework_in_main_app/: how_to_run_example.txt  requirements.txt
examples/use_with_any_framework_in_main_app/src/: admin.py  db.py  main.py
gino_admin/: __init__.py  auth.py  cli.py  config.py  core.py  history.py  routes.py  types.py  users.py  utils.py
gino_admin/routes/: crud.py  logic.py  main.py  rest.py
gino_admin/static/: app.css
gino_admin/templates/: add_form.html  app.html  base.html  data_gen.py  data_table.html  db_drop.html  delete_modal.html  file_upload.html  footer.html  header.html  history.html  index.html  init_db.html  login.html  model_view.html  presets.html  settings.html  sql_runner.html  table_control_items.html
gino_admin/templates/modals/: deepcopy_modal.html  delete_modal.html
tests/: test_utils.py
tests/integration_tests/: base_tests.py  conftest.py  test-docker-compose.yml  test_base_example.py  test_base_example_ui.py  test_composite_csv_example.py  test_fastapi_as_main_app_example.py  tests_helpers.py  wait_for.py
tests/integration_tests/docker/: docker-compose.yml  run.sh
tests/integration_tests/docker/base_example/: Dockerfile
tests/integration_tests/docker/composite_csv_example/: Dockerfile
tests/integration_tests/docker/fastapi_as_main_app/: Dockerfile  Dockerfile-admin
tests/integration_tests/tests/: base_tests.py  conftest.py  test_base_example.py  test_base_example_ui.py  test_composite_csv_example.py  test_fastapi_as_main_app_example.py  tests_helpers.py
tests/unit/: test_utils.py
tests/unittests/: test_utils.py
(+13 files in other folders)
